# object_detector

./: CMakeLists.txt  README.md  package.xml
config/: object_detector.yaml
include/: util.h
include/object_detector/: util.h
launch/: detector.launch
matlab/: data.csv  data_process.m
rviz/: debug.rviz
shell/: auto_start.sh  start_onboard.sh  start_onboard_debug.sh
src/: detector.cpp  main.cpp
