<?xml version="1.0"?>
<package format="2">
    <name>object_detector</name>
    <version>1.0.0</version>
    <description>none</description>
    <maintainer email="yxpeng@udel.edu">Yuxiang Peng</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>usfs_common</build_depend>
    <build_depend>usfs_inference</build_depend>
    <build_depend>usfs_bridge</build_depend>
    <build_depend>usfs_example</build_depend>
    <build_depend>platform_driver</build_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>usfs_common</exec_depend>
    <exec_depend>usfs_inference</exec_depend>
    <exec_depend>usfs_example</exec_depend>
     <exec_depend>usfs_bridge</exec_depend>
    <exec_depend>platform_driver</exec_depend>
</package>